--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/open-sans": "^5.0.3",
     "boxicons": "^2.1.4",
     "flag-icons": "^6.7.0",
+    "luxon": "^3.3.0",
     "numeral": "^2.0.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
@@ -28,6 +29,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
+    "@types/luxon": "^3.3.0",
     "@types/node": "^18.16.17",
     "@types/numeral": "^2.0.2",
     "@vitejs/plugin-vue": "^4.2.3",
