Improved and added fixes SimpleTable fork Added Table fork

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
     "composite": true,
     "baseUrl": ".",
     "lib": ["DOM", "ESNext"],
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "module": "ESNext",
     "moduleResolution": "node"
   },
