--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@fontsource/open-sans": "^5.0.3",
+    "axios": "^1.6.1",
     "boxicons": "^2.1.4",
     "flag-icons": "^6.7.0",
     "luxon": "^3.3.0",
