The library now can be built with the distributed files being able to be used in child projects.
Additionally I brought fixes to multiple components including the table
components.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,9 +6,13 @@
     "composite": true,
     "baseUrl": ".",
     "lib": ["DOM", "ESNext"],
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "module": "ESNext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "types": ["vite/client"]
   },
   "vueCompilerOptions": {
     "plugins": [
