--- a/package.json
+++ b/package.json
@@ -1,9 +1,106 @@
 {
   "name": "trackad-frontend-widgets",
   "type": "module",
-  "files": [
-    "src"
-  ],
+  "exports": {
+    "./src/*": "./src/*",
+    "./style.css": "./dist/style.css",
+    "./styles/*.scss": "./src/styles/*.scss",
+    "./container": {
+      "types": "./dist/container.d.ts",
+      "import": "./dist/container.js",
+      "require": "./dist/container.cjs"
+    },
+    "./image": {
+      "types": "./dist/image.d.ts",
+      "import": "./dist/image.js",
+      "require": "./dist/image.cjs"
+    },
+    "./interaction": {
+      "types": "./dist/interaction.d.ts",
+      "import": "./dist/interaction.js",
+      "require": "./dist/interaction.cjs"
+    },
+    "./label": {
+      "types": "./dist/label.d.ts",
+      "import": "./dist/label.js",
+      "require": "./dist/label.cjs"
+    },
+    "./layout": {
+      "types": "./dist/layout.d.ts",
+      "import": "./dist/layout.js",
+      "require": "./dist/layout.cjs"
+    },
+    "./marker": {
+      "types": "./dist/marker.d.ts",
+      "import": "./dist/marker.js",
+      "require": "./dist/marker.cjs"
+    },
+    "./view": {
+      "types": "./dist/view.d.ts",
+      "import": "./dist/view.js",
+      "require": "./dist/view.cjs"
+    },
+    "./utils/currency": {
+      "types": "./dist/utils/currency.d.ts",
+      "import": "./dist/utils/currency.js",
+      "require": "./dist/utils/currency.cjs"
+    },
+    "./utils/date": {
+      "types": "./dist/utils/date.d.ts",
+      "import": "./dist/utils/date.js",
+      "require": "./dist/utils/date.cjs"
+    },
+    "./utils/error": {
+      "types": "./dist/utils/error.d.ts",
+      "import": "./dist/utils/error.js",
+      "require": "./dist/utils/error.cjs"
+    },
+    "./utils/format": {
+      "types": "./dist/utils/format.d.ts",
+      "import": "./dist/utils/format.js",
+      "require": "./dist/utils/format.cjs"
+    },
+    "./utils/layout_header_account": {
+      "types": "./dist/utils/layout_header_account.d.ts",
+      "import": "./dist/utils/layout_header_account.js",
+      "require": "./dist/utils/layout_header_account.cjs"
+    },
+    "./utils/line_bar_chart": {
+      "types": "./dist/utils/line_bar_chart.d.ts",
+      "import": "./dist/utils/line_bar_chart.js",
+      "require": "./dist/utils/line_bar_chart.cjs"
+    },
+    "./utils/match": {
+      "types": "./dist/utils/match.d.ts",
+      "import": "./dist/utils/match.js",
+      "require": "./dist/utils/match.cjs"
+    },
+    "./utils/menu": {
+      "types": "./dist/utils/menu.d.ts",
+      "import": "./dist/utils/menu.js",
+      "require": "./dist/utils/menu.cjs"
+    },
+    "./utils/mood": {
+      "types": "./dist/utils/mood.d.ts",
+      "import": "./dist/utils/mood.js",
+      "require": "./dist/utils/mood.cjs"
+    },
+    "./utils/sort": {
+      "types": "./dist/utils/sort.d.ts",
+      "import": "./dist/utils/sort.js",
+      "require": "./dist/utils/sort.cjs"
+    },
+    "./utils/table": {
+      "types": "./dist/utils/table.d.ts",
+      "import": "./dist/utils/table.js",
+      "require": "./dist/utils/table.cjs"
+    },
+    "./utils/theme": {
+      "types": "./dist/utils/theme.d.ts",
+      "import": "./dist/utils/theme.js",
+      "require": "./dist/utils/theme.cjs"
+    }
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,6 +120,7 @@
     "flag-icons": "^6.7.0",
     "luxon": "^3.3.0",
     "numeral": "^2.0.6",
+    "vite-plugin-dts": "^3.6.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
