Added tree multiselect component

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "funnel-graph-js": "^1.4.2",
     "numeral": "^2.0.6",
     "polymorph-js": "^1.0.2",
+    "treeselectjs": "^0.10.0",
     "vue2-teleport": "^1.0.1"
   },
   "devDependencies": {
