TRACKAD-7542 clean vfw

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trackad-frontend-widgets",
+  "name": "vue-frontend-widgets",
   "type": "module",
   "exports": {
     "./src/*": "./src/*",
