--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "exports": {
     "./src/*": "./src/*",
     "./style.css": "./dist/style.css",
+    "./fonts.css": "./dist/fonts.css",
     "./styles/*.scss": "./src/styles/*.scss",
     "./container": {
       "types": "./dist/container.d.ts",
@@ -114,10 +115,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fontsource/open-sans": "5.0.28",
+    "@fortawesome/fontawesome-free": "6.5.2",
     "axios": "^1.6.1",
-    "boxicons": "^2.1.4",
     "element-plus": "^2.7.3",
-    "flag-icons": "^6.7.0",
+    "flag-icons": "6.7.0",
     "luxon": "^3.3.0",
     "numeral": "^2.0.6",
     "vite-plugin-dts": "^3.6.3",
@@ -146,9 +148,13 @@
     "pug": "^3.0.2",
     "sass": "^1.63.4",
     "typescript": "~5.0.4",
+    "unplugin-element-plus": "^0.8.0",
     "vite": "^4.3.9",
+    "vite-plugin-static-copy": "1.0.6",
     "vitest": "^0.32.0",
-    "vue-tsc": "^1.6.5",
-    "unplugin-element-plus": "^0.8.0"
+    "vue-tsc": "^1.6.5"
+  },
+  "resolutions": {
+    "@vue/*/braces": "3.0.3"
   }
 }
