--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "@fontsource/open-sans": "5.0.28",
     "@fortawesome/fontawesome-free": "6.5.2",
     "axios": "^1.6.1",
-    "element-plus": "^2.7.3",
+    "element-plus": "2.7.7",
     "flag-icons": "6.7.0",
     "luxon": "^3.3.0",
     "numeral": "^2.0.6",
