migrated funnel graph from vue2

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "allowJs": true
   },
   "vueCompilerOptions": {
     "plugins": [
