--- a/package.json
+++ b/package.json
@@ -119,7 +119,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "up-major": "yarn version --major",
+    "up-minor": "yarn version --minor"
   },
   "dependencies": {
     "@fontsource/open-sans": "5.0.28",
