--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -33,7 +33,7 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
         cache: 'yarn'
         
-    - run: yarn --frozen-lockfile
+    - run: yarn install
     - run: yarn build
     
     - run: echo "FULL_NPM_VERSION=$(npm pkg get version  | tr -d '"')" >> $GITHUB_ENV
@@ -59,7 +59,6 @@ jobs:
         gh release create "$FULL_NPM_VERSION" \
             --repo="$GITHUB_REPOSITORY" \
             --title="${FULL_NPM_VERSION#v}" \
-            --generate-notes
       env:
         GH_TOKEN: ${{ github.token }}
 
