--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "exports": {
     "./src/*": "./src/*",
     "./style.css": "./dist/style.css",
-    "./fonts.css": "./dist/fonts.css",
-    "./styles/*.scss": "./src/styles/*.scss",
+    "./styles/fonts/fonts.css": "./dist/styles/fonts/fonts.css",
+    "./styles/*.scss": "./dist/styles/*.scss",
     "./container": {
       "types": "./dist/container.d.ts",
       "import": "./dist/container.js",
@@ -162,7 +162,7 @@
     "typescript": "~5.0.4",
     "unplugin-element-plus": "^0.8.0",
     "vite": "^4.3.9",
-    "vite-plugin-static-copy": "1.0.6",
+    "vite-plugin-static-copy": "^2.0.0",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
   },
