--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint src/ --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "format": "prettier --write src/",
     "up-major": "yarn version --major",
     "up-minor": "yarn version --minor"
@@ -139,24 +139,23 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
+    "@rushstack/eslint-patch": "^1.10.4",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
     "@types/luxon": "^3.3.0",
     "@types/node": "^18.16.17",
     "@types/numeral": "^2.0.2",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@volar/vue-language-plugin-pug": "^1.6.5",
-    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/language-plugin-pug": "^1.8.1",
+    "@vue/language-plugin-pug": "^2.1.10",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.31.0",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.4.1",
     "pug": "^3.0.2",
     "sass": "^1.63.4",
     "typescript": "~5.0.4",
