--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@fortawesome/fontawesome-free": "6.5.2",
     "@tweenjs/tween.js": "25.0.0",
     "axios": "^1.6.1",
-    "element-plus": "2.7.7",
+    "element-plus": "2.9.10",
     "flag-icons": "6.7.0",
     "funnel-graph-js": "1.4.2",
     "luxon": "^3.3.0",
@@ -68,12 +68,12 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.4.1",
     "pug": "^3.0.2",
-    "sass": "^1.63.4",
+    "sass": "^1.89.0",
     "typescript": "~5.0.4",
     "unplugin-element-plus": "^0.8.0",
-    "vite": "^4.3.9",
+    "vite": "^5.4.7",
     "vite-plugin-static-copy": "^2.0.0",
-    "vitest": "^0.32.0",
+    "vitest": "3.1.3",
     "vue-tsc": "^1.6.5"
   },
   "resolutions": {
